--- a/blocks/cards/__overlay/cards__overlay.css
+++ b/blocks/cards/__overlay/cards__overlay.css
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     z-index: 1;
-    background-color: black;
+    background-color: white;
     transform: translateY(100%);
     transition: .4s linear;
     display: flex;
