--- a/blocks/cards/__main-text/cards__main-text.css
+++ b/blocks/cards/__main-text/cards__main-text.css
@@ -1,7 +1,7 @@
 .cards__main-text {
     padding: 0 2em 50px;
     margin: 0;
-    color: black;
+    color: white;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     overflow: hidden;
